--- a/HornetAir/makefile.txt
+++ b/HornetAir/makefile.txt
@@ -1,1 +1,1 @@
-gg++ main.cpp -o main `pkg-config --cflags --libs opencv4` -lpthread
+g++ main.cpp -o main `pkg-config --cflags --libs opencv4` -lpthread
